#58 FIX: CORE API - improvement IgnoresThrowable - re-design of StepFunction
Seleniun:
- improved test running